--- a/application/views/scripts/usuarios/novo.phtml
+++ b/application/views/scripts/usuarios/novo.phtml
@@ -1,3 +1,12 @@
+<?php
+if ($this->mensagemErro): 
+    echo $this->mensagemErro;
+    echo '<br /><a href=" ' 
+        . $this->url(array('controller' => 'usuarios', 'action' => 'listar')) 
+        . '" title="Voltar">Voltar</a>';
+else :
+?>
+
 <form action="novo" method="post">
     <label>Nome: <input type="text" id="nome" name="nome" /></label><br />
     <label>E-mail: <input type="text" id="email" name="email" /></label><br /> 
@@ -14,3 +23,7 @@
     <label>Complemento: <input type="text" id="complemento" name="complemento" /></label><br /> 
     <input type="submit" value="Cadastrar" />
 </form>
+
+<?php
+endif;
+?>
