--- a/application/layouts/scripts/login.phtml
+++ b/application/layouts/scripts/login.phtml
@@ -1,12 +1,12 @@
 <html>
     <head>
         <title>Login</title>
-        <link rel="stylesheet" type="text/css" href="css/login.css"/>
+        <link rel="stylesheet" type="text/css" href="/css/login.css" />
     </head>
 
     <body>
         <div id="container">
-            <img id="logo" src="imagens/logo.png" width="500px" height="245px"/>
+            <img id="logo" src="/imagens/logo.png" width="500px" height="245px" />
 
             <div id="geral">
                 <?php echo $this->layout()->content; ?>
@@ -15,7 +15,7 @@
         </div>
 
         <div id="rodape">
-            <img src="imagens/logo2.png"/>
+            <img src="/imagens/logo2.png" />
         </div>
     </body>
   
