--- a/public/css/geral.css
+++ b/public/css/geral.css
@@ -1,27 +1,27 @@
 body {
-	margin:0;
-	padding:0;
+    margin:0;
+    padding:0;
 }
 
 .class {
-	clear: both;
+    clear: both;
 }
 
 #geral {
-	text-align:left;
-	min-height:100%;
+    text-align:left;
+    min-height:100%;
+    float: top;
 }
 
 #header {
-	background-image: url(imagens/background2.png);
-	width: 100%;
-	height: 78px;
-	position: fixed;
+    background-image: url('imagens/background2.png');
+    width: 100%;
+    height: 78px;
+    position: fixed;
 }
 
 #login {
-	float: right;
-	bottom: -10px;
+    float: right;
 }
 
 #login a {
@@ -33,102 +33,110 @@ body {
 }
 
 #idiomas li {
-	display: inline;
+    display: inline;
 }
 
 #idiomas a {
-	text-decoration: none;
+    text-decoration: none;
 }
 
 #menu{
-	padding:0;
-	margin:0;
-	background: -webkit-linear-gradient(top, #45484d 0%,#000000 100%);
-	height: 30px;
-	width: 100%;
+    padding:0;
+    margin:0;
+    background: #45484d; /* Old browsers */
+    background: -moz-linear-gradient(top,  #45484d 0%, #000000 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#45484d), color-stop(100%,#000000)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  #45484d 0%,#000000 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  #45484d 0%,#000000 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  #45484d 0%,#000000 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  #45484d 0%,#000000 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#45484d', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
+    height: 30px;
+    width: 100%;
 }
 
 #menu ul{
-	float: right;
-	padding:0;
-	margin:0;
+    float: right;
+    padding:0;
+    margin:0;
 }
 
 #menu li{
-	position: relative;
-	float: left;
-	list-style: none;
-	margin: 0;
-	padding:0;
+    position: relative;
+    float: left;
+    list-style: none;
+    margin: 0;
+    padding:0;
 }
 
 #menu li a{
-	font: bold 13px Arial;
-	width:100px;
-	height: 30px;
-	display: block;
-	text-decoration:none;
-	text-align: center;
-	line-height: 30px;
-	color: white;
+    font: bold 13px Arial;
+    width:100px;
+    height: 30px;
+    display: block;
+    text-decoration:none;
+    text-align: center;
+    line-height: 30px;
+    color: white;
 }
 
 #menu li a:hover {
-	background: -webkit-gradient(linear, left top, left bottom, from(#ebeded), to(#c4dddd));
+    background: -webkit-gradient(linear, left top, left bottom, from(#ebeded), to(#c4dddd));
 }
 
 #menu li ul li a {
-  background:#FFFFFF;
-  box-shadow:0px 0px 1px #000000;
-  color: black;
+    background:#FFFFFF;
+    box-shadow:0px 0px 1px #000000;
+    color: black;
 }
 
 #menu li ul li a:hover {
-	background: -webkit-gradient(linear, left top, left bottom, from(#ebeded), to(#c4dddd));
+    background: -webkit-gradient(linear, left top, left bottom, from(#ebeded), to(#c4dddd));
 }
 
 #menu ul ul{
-	position: absolute;
-	top: 30px;
-	visibility: hidden;
+    position: absolute;
+    top: 30px;
+    visibility: hidden;
 }
 
 #menu ul li:hover ul{
-	visibility:visible;
+    visibility:visible;
 }
 
 #conteudo {
-	padding-top:5%;
-	text-align:justify;
-	min-height: 160%;
-	width: 100%;
-	padding-bottom: 10%;
-	}
+    padding-top:12%;
+    text-align:justify;
+    min-height: 160%;
+    width: 100%;
+    padding-bottom: -12%;
+}
 	
 #rodape {
-	background:#E8E8E8;
-	width:100%;
-	height:7%;
+    background:#E8E8E8;
+    width:100%;
+    height:7%;
     position:absolute;
     bottom:0;
     width:100%;
 }
 
 #rodape img {
-  position: relative;
-  margin: 0.5% 1% 0% 95%;
-  height: 75%;
-  width: 4%;
+    position: relative;
+    margin: 0.5% 1% 0% 95%;
+    height: 75%;
+    width: 4%;
 }
+
 #titulo {
-	margin-top: 10%;
-	margin-left: 3%;
-	font: bold 100% Arial;
-	color: #BEBEBE;
-	padding: 0.5%;
-	border: 1px solid #e8e8e8;
-	border-top-color: transparent;
-	border-right-color: transparent;
-	border-left-color: transparent;
-	width: 50%;
-}*/
+    margin-top: 10%;
+    margin-left: 3%;
+    font: bold 100% Arial;
+    color: #BEBEBE;
+    padding: 0.5%;
+    border: 1px solid #e8e8e8;
+    border-top-color: transparent;
+    border-right-color: transparent;
+    border-left-color: transparent;
+    width: 50%;
+}
