--- a/public/css/login.css
+++ b/public/css/login.css
@@ -75,6 +75,7 @@ label {
     border-left-color: transparent;
     border-bottom-color: transparent;
     background:#E8E8E8;
+    width: 100%;
     height:10%;
     position:absolute;
     bottom:0;
