--- a/public/css/geral.css
+++ b/public/css/geral.css
@@ -4,7 +4,7 @@ body {
 }
 
 #header {
-	background-image: url(imagens/background2.png);
+	background-image: url('../imagens/background2.png');
 	width: 100%;
 	height: 78px;
 }
