--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -7,13 +7,13 @@
 
     <body>
         <div id="header">
-            <img src="imagens/logo.png" width="145px" height="75px"/>
+            <img src="../imagens/logo.png" width="145px" height="75px"/>
             <div id="login">
                     <a href="#">Rafaela Souza</a> |<a href="#">logout</a>
-                    <br><a href="#"><img src="imagens/Brazil-icon.png"/></a>
-                    <a href="#"><img src="imagens/France-icon.png"/></a>
-                    <a href="#"><img src="imagens/United-States-of-Americ-icon.png"/></a>
-                    <a href="#"><img src="imagens/Spain-icon.png"/></a>
+                    <br><a href="#"><img src="../imagens/Brazil-icon.png"/></a>
+                    <a href="#"><img src="../imagens/France-icon.png"/></a>
+                    <a href="#"><img src="../imagens/United-States-of-Americ-icon.png"/></a>
+                    <a href="#"><img src="../imagens/Spain-icon.png"/></a>
             </div>
         </div>
 
