--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -61,7 +61,7 @@
     <div class="clear"></div>
 
     <div id="rodape">
-            <img src="imagens/logo2.png">
+            <img src="../imagens/logo2.png">
     </div>
     
     </body>
