--- a/public/css/geral.css
+++ b/public/css/geral.css
@@ -35,7 +35,8 @@ body {
 	background:#E8E8E8;
 	width:100%;
 	height:7%;
-    position: absolute;
+        position: absolute;
+        bottom: 0;
 }
 
 #rodape img {
