--- a/application/views/scripts/projetos/listar-tarefas.phtml
+++ b/application/views/scripts/projetos/listar-tarefas.phtml
@@ -1,32 +1,14 @@
 <table border="1">
     <tr>
-        <td>IdU</td>
-        <td>nome Usuario</td>
-        <td>idT</td>
         <td>Nome Tarefa</td>
-        <td>Prioridade</td>
-        <td>Data fim</td>
-        <td>IdS</td>
-        <td>nome Super</td>
-        <td>Id Projeto</td>
-        <td>Nome Projeto</td>
+        <td>Descrição</td>
     </tr>
     <?php
     foreach ($this->tarefas as $tarefa):
     ?>
     <tr>
-        <td><?= $tarefa->idusuario ?></td>
-        <td><?= $tarefa->nomeusuario ?></td>
-        <td><?= $tarefa->idtarefa ?></td>
-        <td><?= $tarefa->nometarefa ?></td>
-        <td><?= $tarefa->prioridadetarefa ?></td>
-        <td><?= $tarefa->datafimtarefa ?></td>
-        <td><?= $tarefa->idsupertarefa ?></td>
-        <td><?= $tarefa->nomesupertarefa ?></td>
-        <td><?= $tarefa->idprojeto ?></td>
-        <td><?= $tarefa->nomeprojeto ?></td>
-
-     
+        <td><?= $tarefa->nome ?></td>
+        <td><?= $tarefa->descricao ?></td>     
         <td>
         <a href="
             <?php 
@@ -90,6 +72,32 @@
                     ); 
             ?>" 
             title="Desalocar">Desalocar
+        </a>
+        </td>
+        <td>
+        <a href="
+            <?php 
+            echo $this->url(array('controller' => 'projetos', 
+                                  'action'     => 'adicionar-tempo', 
+                                  'idtarefa'   => $tarefa->idtarefa,
+                                  'idprojeto'  => $tarefa->idprojeto
+                    )
+                    ); 
+            ?>" 
+            title="Adiconar">Adiconar Tempo
+        </a>
+        </td>
+        <td>
+        <a href="
+            <?php 
+            echo $this->url(array('controller' => 'projetos', 
+                                  'action'     => 'nova-sub-tarefa', 
+                                  'idtarefa'   => $tarefa->idtarefa,
+                                  'idprojeto'  => $tarefa->idprojeto
+                    )
+                    ); 
+            ?>" 
+            title="NovaSubTarefa">Nova SubTarefa
         </a>
         </td>
     </tr>
