--- a/application/views/scripts/projetos/alocar-usuario-tarefa.phtml
+++ b/application/views/scripts/projetos/alocar-usuario-tarefa.phtml
@@ -4,8 +4,15 @@
     <label>Nome do Usuario: 
         <select id="usuario" name="usuario">
             <?php 
-            foreach($this->vUsuarioProjeto as $usuarioProjeto)
-                echo "<option value=\"$usuarioProjeto->idusuario\">$usuarioProjeto->nomeusuario</option>";
+            foreach($this->vUsuarioProjeto as $usuarioProjeto){
+                $flag=0;
+                foreach($this->vRealiza as $usuarioTarefa)
+                    if ($usuarioProjeto->idusuario == $usuarioTarefa->idusuario)
+                        $flag=1;
+                if ($flag==0)
+                    echo "<option value=\"$usuarioProjeto->idusuario\">$usuarioProjeto->nomeusuario</option>";
+                $flag=0;
+            }
             ?>
         </select>     
     <input type="submit" value="Cadastrar" />
