mudando ordem em tarefas...

--- a/application/views/scripts/projetos/nova-tarefa.phtml
+++ b/application/views/scripts/projetos/nova-tarefa.phtml
@@ -8,11 +8,10 @@
         </select>
     </label><br />
     <label>Nome: <input type="text" id="nome" name="nome" /></label><br />
-    <label>Descrição: <input type="text" id="descricao" name="descricao" /></label><br /> 
-    <label>Data Início: <input type="text" id="dataInicio" name="dataInicio" /></label><br />     
-    <label>Data Fim(Previsão): <input type="text" id="dataPrevFim" name="dataPrevFim" /></label><br /> 
+    <label>Data Início: <input type="text" id="dataInicio" name="dataInicio" /></label><br />
+    <label>Data Fim(Previsão): <input type="text" id="dataPrevFim" name="dataPrevFim" /></label><br />     
     <label>Prioridade: <input type="text" id="prioridade" name="prioridade" /></label><br /> 
-    <label>Responsavel: 
+    <label>Descrição: <input type="text" id="descricao" name="descricao" /></label><br />      <label>Responsavel: 
         <select id="responsavel" name="responsavel">
             <?php 
             foreach($this->usuarios as $usuario)
