html listar projetos

--- a/application/views/scripts/projetos/listar.phtml
+++ b/application/views/scripts/projetos/listar.phtml
@@ -1,32 +1,13 @@
-<table border="1">
-    <tr>
-        <td>Id</td>
-        <td>Nome</td>
-        <td>Descrição</td>
-        <td>Data Início</td>
-        <td>Data Fim(Previsão)</td>
-        <td>Data Fim</td>
-        <td>Repositório</td>
-        <td>Gerente</td>
-    </tr>
-    <?php
+<?php
     foreach ($this->projetos as $projeto):
-    ?>
-    <tr>
-        <td><?= $projeto->idprojeto ?></td>
-        <td><?= $projeto->nomeprojeto ?></td>
-        <td><?= $projeto->descricao ?></td>
-        <td><?= $projeto->datainicioprojeto ?></td>
-        <td><?= $projeto->dataprevfim ?></td>
-        <td><?= $projeto->datafim ?></td>
-        <td>
-            <a href="<?= $projeto->findParentRepositorios()->endereco ?>">
-            <?= $projeto->findParentRepositorios()->endereco ?>
-            </a>
-        </td>
-        <td><?= $projeto->nomeusuario ?></td>
-                
-        <td>
+?>
+<fieldset>
+    <legend><?= $projeto->nomeprojeto ?> </legend>
+    <p>Descrição: <?= $projeto->descricao ?></p>
+    <p>Data de Inicio: <?= $projeto->datainicioprojeto ?></p>
+    <p>Data de Fim (Previsão): <?= $projeto->dataprevfim ?></p>
+    <p>Data Final: <?= $projeto->datafim ?></p>
+</fieldset>
         <a href="
             <?php 
             echo $this->url(array('controller' => 'projetos', 
@@ -36,9 +17,7 @@
                     ); 
             ?>" 
             title="Editar">Editar
-        </a>
-        </td>
-        <td>
+        </a><br />
         <a href="
             <?php 
             echo $this->url(array('controller' => 'projetos', 
@@ -48,16 +27,21 @@
                     ); 
             ?>" 
             title="Remover">Remover
-        </a>
-        </td>
-    </tr>
+        </a><br />
     <?php
     endforeach;
     ?>
-</table>
 <a href="
     <?php 
     echo $this->url(array('controller' => 'projetos', 'action' => 'novo')); 
     ?>" 
     title="Novo projeto">Novo projeto
-</a>
+</a><br />
+<!--        <td>
+            <a href=" <?//= $projeto->findParentRepositorios()->endereco ?>">
+            <?//= $projeto->findParentRepositorios()->endereco ?>
+            </a>
+        </td>
+        <td><?//= $projeto->nomeusuario ?></td>
+                
+        <td>  -->
