correção do bug ao criar um projeto e parcial do relatorio

--- a/application/views/scripts/projetos/listar.phtml
+++ b/application/views/scripts/projetos/listar.phtml
@@ -2,9 +2,9 @@
     foreach ($this->projetos as $projeto):
 ?>
 <fieldset>
-    <legend><?= $projeto->nomeprojeto ?> </legend>
+    <legend><?= $projeto->nome ?> </legend>
     <p>Descrição: <?= $projeto->descricao ?></p>
-    <p>Data de Inicio: <?= $projeto->datainicioprojeto ?></p>
+    <p>Data de Inicio: <?= $projeto->datainicio ?></p>
     <p>Data de Fim (Previsão): <?= $projeto->dataprevfim ?></p>
     <p>Data Final: <?= $projeto->datafim ?></p>
 </fieldset>
