Alterações no HTML de Projetos e Usuários.

--- a/application/views/scripts/projetos/listar.phtml
+++ b/application/views/scripts/projetos/listar.phtml
@@ -1,14 +1,26 @@
+<?php echo $this->headLink()->appendStylesheet('/css/telaProjetos.css');?>
+
+<div type="button" id="botaoCad">
+        <a href="    
+            <?php 
+                echo $this->url(array('controller' => 'projetos', 'action' => 'novo')); 
+            ?>" 
+        title="Novo projeto">Cadastrar</a>
+</div>
+    
 <?php
     foreach ($this->projetos as $projeto):
 ?>
+<div id="projetos">
 <fieldset>
     <legend><?= $projeto->nomeprojeto ?> </legend>
-    <p>Descrição: <?= $projeto->descricao ?></p>
+    <p>Descri&ccedil;&atilde;o: <?= $projeto->descricao ?></p>
     <p>Data de Inicio: <?= $projeto->datainicioprojeto ?></p>
-    <p>Data de Fim (Previsão): <?= $projeto->dataprevfim ?></p>
+    <p>Data de Fim (Previs&atilde;o): <?= $projeto->dataprevfim ?></p>
     <p>Data Final: <?= $projeto->datafim ?></p>
-</fieldset>
-        <a href="
+    
+   
+   <a href="
             <?php 
             echo $this->url(array('controller' => 'projetos', 
                                   'action'     => 'editar', 
@@ -16,8 +28,8 @@
                     )
                     ); 
             ?>" 
-            title="Editar">Editar
-        </a><br />
+            title="Editar"><img src="/imagens/edit.png"/>
+        </a>
         <a href="
             <?php 
             echo $this->url(array('controller' => 'projetos', 
@@ -26,17 +38,37 @@
                     )
                     ); 
             ?>" 
-            title="Remover">Remover
-        </a><br />
+            title="Remover"><img src="/imagens/delete-icon.png"/>
+        </a>
+        <a href="
+            <?php 
+            echo $this->url(array('controller' => 'projetos', 
+                                  'action'     => 'alocar', 
+                                  'id' => $projeto->idprojeto
+                    )
+                    ); 
+            ?>" 
+            title="Remover"><img src="/imagens/alocar.png"/>
+        </a>
+        <a href="
+            <?php 
+            echo $this->url(array('controller' => 'projetos', 
+                                  'action'     => 'desalocar', 
+                                  'id' => $projeto->idprojeto
+                    )
+                    ); 
+            ?>" 
+            title="Remover"><img src="/imagens/edit.png"/>
+        </a>
+        </div>
+        <br />
     <?php
     endforeach;
     ?>
-<a href="
-    <?php 
-    echo $this->url(array('controller' => 'projetos', 'action' => 'novo')); 
-    ?>" 
-    title="Novo projeto">Novo projeto
-</a><br />
+
+</fieldset>
+
+<br />
 <!--        <td>
             <a href=" <?//= $projeto->findParentRepositorios()->endereco ?>">
             <?//= $projeto->findParentRepositorios()->endereco ?>
