--- a/application/views/scripts/usuarios/novo.phtml
+++ b/application/views/scripts/usuarios/novo.phtml
@@ -1,3 +1,5 @@
+<?php echo $this->headLink()->appendStylesheet('/css/cadastroUsuarios.css');?>
+
 <?php
 if ($this->mensagemErro): 
     echo $this->mensagemErro;
@@ -7,23 +9,91 @@ if ($this->mensagemErro):
 else :
 ?>
 
+<div id="cadastro">
 <form action="novo" method="post">
-    <label>Nome: <input type="text" id="nome" name="nome" /></label><br />
-    <label>Data Nascimento: <input type="text" id="dataNasc" name="dataNasc" /></label><br /> 
-    <label>Sexo: <input type="text" id="sexo" name="sexo" /></label><br /> 
-    <label>CPF: <input type="text" id="cpf" name="cpf" /></label><br /> 
-    <label>Telefone: <input type="text" id="telefone" name="telefone" /></label><br /> 
-    <label>E-mail: <input type="text" id="email" name="email" /></label><br /> 
-    <label>Login: <input type="text" id="login" name="login" /></label><br />
-    <label>Rua: <input type="text" id="rua" name="rua" /></label><br /> 
-    <label>Numero: <input type="text" id="num" name="num" /></label><br /> 
-    <label>Bairro: <input type="text" id="bairro" name="bairro" /></label><br /> 
-    <label>Complemento: <input type="text" id="complemento" name="complemento" /></label><br /> 
-    <label>Cidade: <input type="text" id="cidade" name="cidade" /></label><br /> 
-    <label>Estado: <input type="text" id="estado" name="estado" /></label><br /> 
+		<fieldset id="pessoal">
+				<legend>Informa&ccedil;&otilde;es pessoais</legend>
+		      
+		      <label>Nome do Usu&aacute;rio:</label> <br>
+		      <input type="text" size="60px"/><br></br>
+		      
+		      <label>Data de Nascimento:</label>
+		      <label style="margin-left: 3%">Sexo:</label><br>
+		      <input type="text" name="data_nasc" id="data_nasc" size="14"/>
+		      
+		      <select>
+			  <option>Masculino</option>
+			  <option>Feminino</option>
+		      </select> <br><br>
+		      
+		      <label>CPF
+		      <label style="margin-left: 33.5%">Telefone:</label><br>
+		      <input type="text"/>
+		      <input type="text"/><br><br>
+		      
+		      <label>E-mail:</label><br>
+		      <input type="text" size="60px"/><br></br>
 
-    <input type="submit" value="Cadastrar" />
+
+		      <label> Login do Usu&aacute;rio:</label><br>
+			  <input type="text"/>
+
+		</fieldset>
+
+		<fieldset id="endereco">
+		      <legend>Endere&ccedil;o</legend>
+		      
+		      <label>Rua:</label>
+		      <label style="margin-left: 65%">N&uacute;mero:</label><br>
+		      <input type="text" size="40px"/>
+		      <input type="text" size="5px"/><br></br>
+		      
+		      <label>Bairro: </label>
+		      <label style="margin-left: 30.5%">Complemento</label><br>
+		      <input type="text"/>
+		      <input type="text"/> <br><br>
+		      
+		      <label>Cidade:</label> 
+		      <label style="margin-left: 29.5%">Estado:</label> <br>
+		      <input type="text"/>
+		      
+		      <select>
+			  <option>AC</option>
+			  <option>AL</option>
+			  <option>AM</option>
+			  <option>AP</option>
+			  <option>BA</option>
+			  <option>CE</option>
+			  <option>ES</option>
+			  <option>GO</option>
+			  <option>MA</option>
+			  <option>MG</option>
+			  <option>MS</option>
+			  <option>MT</option>
+			  <option>PA</option>
+			  <option>PB</option>
+			  <option>PE</option>
+			  <option>PI</option>
+			  <option>PR</option>
+			  <option>AC</option>
+			  <option>RJ</option>
+			  <option>RN</option>
+			  <option>RO</option>
+			  <option>RR</option>
+			  <option>RS</option>
+			  <option>SC</option>
+			  <option>SE</option>
+			  <option>SP</option>
+			  <option>TO</option>
+		      </select><br></br>
+
+
+			<input id="cancelar" type="submit" value="Cancelar"/>
+			<input id="salvar" type="submit" value="Salvar"/>
+		    
+		 </fieldset>
 </form>
+    </div>
 
 <?php
 endif;
