--- a/application/views/scripts/projetos/relatorio-projeto.phtml
+++ b/application/views/scripts/projetos/relatorio-projeto.phtml
@@ -10,54 +10,13 @@
             <?php
             foreach ($this->vRelatorioProj as $relatorio):
                 
-               $tempo=$relatorio->tempodedicado;
-                        $x=0; 
-            $flagd=0; 
-            $d2="";$h2="";$m2="";
-            while ($x<strlen($tempo)-1){
-                if ($tempo[$x]=='d'){
-                   for ($y=0; $y<$x-1; $y++)
-                       $d2=$d2.$tempo[$y];
-                   $flagd=1;
-                   break;
-                }
-                $x++;
-            }
-            if ($flagd==0)
-                $x=0;
-            while ($x<strlen($tempo)-1){
-                if ($tempo[$x]==' '){ $x++;
-                    while ($tempo[$x]!=':')
-                    $h2=$h2.$tempo[$x++];
-                   // if ($x==':'){
-                    $x++;
-                    while ($tempo[$x]!=':')
-                        $m2=$m2.$tempo[$x++];
-                        //if ($x==':')
-                
-                }
-            $x++;
-            }
-            $int1=new DateInterval('P0D');
-            $int2=new DateInterval('P0D');
-            $int2->d=$d2;
-            $int2->h=$h2;
-            $int2->i=$m2;
-
-        $min=$int2->i+$int1->i;
-        $hora=$int2->h+$int1->h;
-        $dia=$int2->d+$int1->d;
-        if ($min>59){
-            $hora=$hora+(int)$min/60;
-            $min=$min%60;
-        }
-        $int2->i=$min;        
-        if ($hora>23){
-            $dia=$dia+(int)$hora/24;
-            $hora=$hora%24;
-        }
-        $int2->h=$hora;
-        $int2->d=$dia; ?>
+                $tempo=$relatorio->tempodedicado; 
+                $d2="";$h2="";$m2=""; 
+                $int1=new DateInterval('P0D');
+                $int2=new DateInterval('P0D');
+                projetos::trataInterval (&$tempo, &$int1, &$int2, &$d2, &$h2, &$m2);
+                $int2=projetos::SomaInterval($int1, $int2);
+            ?>
 
             
           <?=",['".$relatorio->nomeprojeto."', ".$int2->d."]"?>
@@ -84,55 +43,13 @@
     </tr>
     <?php
     foreach ($this->vRelatorioProj as $relatorio):
-    $tempo=$relatorio->tempodedicado;
-            
-            $x=0; 
-            $flagd=0; 
-            $d2="";$h2="";$m2="";
-            while ($x<strlen($tempo)-1){
-                if ($tempo[$x]=='d'){
-                   for ($y=0; $y<$x-1; $y++)
-                       $d2=$d2.$tempo[$y];
-                   $flagd=1;
-                   break;
-                }
-                $x++;
-            }
-            if ($flagd==0)
-                $x=0;
-            while ($x<strlen($tempo)-1){
-                if ($tempo[$x]==' '){ $x++;
-                    while ($tempo[$x]!=':')
-                    $h2=$h2.$tempo[$x++];
-                   // if ($x==':'){
-                    $x++;
-                    while ($tempo[$x]!=':')
-                        $m2=$m2.$tempo[$x++];
-                        //if ($x==':')
-                
-                }
-            $x++;
-            }
-            $int1=new DateInterval('P0D');
+        $tempo=$relatorio->tempodedicado;
+        $int1=new DateInterval('P0D');
             $int2=new DateInterval('P0D');
-            $int2->d=$d2;
-            $int2->h=$h2;
-            $int2->i=$m2;
-
-        $min=$int2->i+$int1->i;
-        $hora=$int2->h+$int1->h;
-        $dia=$int2->d+$int1->d;
-        if ($min>59){
-            $hora=$hora+(int)$min/60;
-            $min=$min%60;
-        }
-        $int2->i=$min;        
-        if ($hora>23){
-            $dia=$dia+(int)$hora/24;
-            $hora=$hora%24;
-        }
-        $int2->h=$hora;
-        $int2->d=$dia; ?>
+            $d2="";$h2="";$m2="";
+            projetos::trataInterval (&$tempo, &$int1, &$int2, &$d2, &$h2, &$m2);
+            projetos::SomaInterval ($int1, $int2);
+       ?>
     <tr>
         <td><?= $relatorio->nomeprojeto ?></td>
         <td><?= $int2->d." days ".$int2->format('%H').":".$int2->format('%I').":".$int2->format('%S')?></td>     
