--- a/public/css/geral.css
+++ b/public/css/geral.css
@@ -3,8 +3,19 @@ body {
 	padding:0;
 }
 
+#geral {
+	padding:0;
+	text-align:left;
+        position: relative;
+}
+
+html, body { height:100%; }
+* html #geral { height:100%; }
+#geral { position: relative; }
+
+
 #header {
-	background-image: url('../imagens/background2.png');
+	background-image: url('/imagens/background2.png');
 	width: 100%;
 	height: 78px;
 }
@@ -16,6 +27,8 @@ body {
 
 #login a {
     text-decoration: none;
+    font: bold 12px Arial;
+    color: gray;
 }
 
 #idiomas {
@@ -31,27 +44,21 @@ body {
 }
 
 #rodape {
-	clear: both;
-	background:#E8E8E8;
+	background: #C7C7C3;
 	width:100%;
 	height:7%;
         position: absolute;
         bottom: 0;
+        clear: both;
 }
 
 #rodape img {
-	margin: 0.5% 1% 0% 91%;
+	margin: 0.5% 1% 0% 95%;
 	height: 75%;
 	width: 4%;
 }
 
-#conteudo {
-	float:left;
-	width:460px;
-	margin-left:10px;
-	text-align:justify;
-	margin-bottom: 50px;
-}
+#conteudo { margin-bottom: 30px; }
 
 #menu{
 	padding:0;
@@ -83,6 +90,7 @@ body {
 }
 
 #menu li a{
+	font:bold 15px Arial;
 	width:100px;
 	height: 30px;
 	display: block;
@@ -133,3 +141,7 @@ body {
 .clear {
 	clear: both;
 }
+
+
+
+    
