--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -3,17 +3,18 @@
     <title>Administrador</title>
     <link rel="stylesheet" type="text/css" href="/css/geral.css"/>
     <link rel="icon" href="imagens/favicon.ico" type="image/x-icon" sizes="16x16" />
+    <meta charset="UTF-8" />
   </head>
 
     <body>
         <div id="header">
-            <img src="../imagens/logo.png" width="145px" height="75px"/>
+            <img src="/imagens/logo.png" width="145px" height="75px"/>
             <div id="login">
-                    <a href="#">Rafaela Souza</a> |<a href="#">logout</a>
-                    <br><a href="#"><img src="../imagens/Brazil-icon.png"/></a>
-                    <a href="#"><img src="../imagens/France-icon.png"/></a>
-                    <a href="#"><img src="../imagens/United-States-of-Americ-icon.png"/></a>
-                    <a href="#"><img src="../imagens/Spain-icon.png"/></a>
+                    <a href="#">Rafaela Souza</a> | <a href="#">logout</a>
+                    <br><a href="#"><img src="/imagens/Brazil-icon.png"/></a>
+                    <a href="#"><img src="/imagens/France-icon.png"/></a>
+                    <a href="#"><img src="/imagens/United-States-of-Americ-icon.png"/></a>
+                    <a href="#"><img src="/imagens/Spain-icon.png"/></a>
             </div>
         </div>
 
