--- a/public/css/geral.css
+++ b/public/css/geral.css
@@ -47,7 +47,7 @@ html, body { height:100%; }
 	background: #C7C7C3;
 	width:100%;
 	height:7%;
-        position: absolute;
+        position: relative;
         bottom: 0;
         clear: both;
 }
