--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -2,7 +2,7 @@
   <head>
     <title>Administrador</title>
     <link rel="stylesheet" type="text/css" href="/css/geral.css"/>
-    <link rel="icon" href="imagens/favicon.ico" type="image/x-icon" sizes="16x16" />
+    <link rel="icon" href="/imagens/favicon.ico" type="image/x-icon" sizes="16x16" />
     <meta charset="UTF-8" />
   </head>
 
@@ -10,7 +10,7 @@
         <div id="header">
             <img src="/imagens/logo.png" width="145px" height="75px"/>
             <div id="login">
-                    <a href="#">Rafaela Souza</a> | <a href="#">logout</a>
+                    <a href="#">Rafaela Souza</a> | <a href="/login/logout">logout</a>
                     <br><a href="#"><img src="/imagens/Brazil-icon.png"/></a>
                     <a href="#"><img src="/imagens/France-icon.png"/></a>
                     <a href="#"><img src="/imagens/United-States-of-Americ-icon.png"/></a>
@@ -22,7 +22,7 @@
 
         <div id="menu">
                 <ul>
-                    <li><a href="telaAdm.html">Home</a></li>
+                    <li><a href="/index">Home</a></li>
                     <li><a href="
                         <?php 
                             echo $this->url(array('controller' => 'usuarios', 
@@ -107,7 +107,7 @@
     <div class="clear"></div>
 
     <div id="rodape">
-            <img src="../imagens/logo2.png">
+            <img src="/imagens/logo2.png">
     </div>
     
     </body>
